# QuorumProof

./: .env.example  ISSUE_22_FIX_SUMMARY.md  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  TODO.md  Uiaccessablecol  Uiemptystate  Uitoastnot  Uizkclaim  test_double_revocation.rs
contracts/quorum_proof/: Cargo.toml
contracts/quorum_proof/src/: lib.rs
contracts/quorum_proof/test_snapshots/tests/: test_add_attestor_enables_attestation.1.json  test_add_attestor_exceeds_max_attestors.1.json  test_attest_revoked_credential_panics.1.json  test_batch_issue_credentials_mismatched_lengths_panics.1.json  test_batch_issue_credentials_success.1.json  test_create_slice_empty_attestors_panics.1.json  test_create_slice_exceeds_max_attestors.1.json  test_credential_expired_after_expiry.1.json  test_credential_not_expired_before_expiry.1.json  test_duplicate_attestation_rejection.1.json  test_empty_metadata_hash_rejection.1.json  test_get_attestor_reputation_increments_per_attestation.1.json  test_get_attestor_reputation_independent_per_attestor.1.json  test_get_attestor_reputation_zero_before_any_attestation.1.json  test_get_credential_count.1.json  test_get_credential_not_found.1.json  test_get_credential_panics_when_expired.1.json  test_get_credential_type_not_registered_panics.1.json  test_get_credentials_by_subject_empty.1.json  test_get_credentials_by_subject_isolated_per_subject.1.json  test_get_credentials_by_subject_multiple.1.json  test_get_credentials_by_subject_single.1.json  (+24 more)
contracts/sbt_registry/: Cargo.toml
contracts/sbt_registry/src/: SbtRegistryContract.sol  lib.rs
(+78 files in other folders)
